--- a/roam/20241022190002-mlx.org
+++ b/roam/20241022190002-mlx.org
@@ -11,13 +11,20 @@ https://harm-smits.github.io/42docs/libs/minilibx
 ** Include
 - mlx.h should be included for a correct use of the MiniLibX API
 ** Linking
-- you'll need to link your software with several libraries, including the MiniLibX library itself
-#+begin_src shell
--lmlx -lXext -lX11
+#+begin_src makefile
+LIBMX := -Lmlx_linux -lmlx_Linux -lXext -lX11 -lm
 #+end_src
-- specify path with =-L= flag
-
+*** -Lmlx_linux
+- specifies directory of the library
+*** -lmlx_Linux
+- link against libmlx_Linux.a
+*** -lX11
+- link against libX11 library
+- graphical user interface library for X11 Window System
+*** -lXext
+- extension library
 * [[id:bde4a506-4119-4411-8ee8-53e003451617][mlx_init]]
 * [[id:832adb34-a640-4c13-8b33-d49fbf5924a0][mlx window api]]
 * [[id:72c4f6ee-2a5b-4140-9300-eb5decbc5748][mlx drawing api]]
 * [[id:5164bfdf-ba98-421c-bd1d-a14ce24cfffc][mlx image api]]
+* [[id:b98a5552-96aa-4167-b706-8ca5cc1273d6][mlx handle events]]
