--- a/roam/20241023101709-x_window_concept.org
+++ b/roam/20241023101709-x_window_concept.org
@@ -6,14 +6,22 @@
 #+startup: overview
 
 https://en.wikipedia.org/wiki/X_Window_System
+[[https://tronche.com/gui/x/][Xlib Programming manual]]
 
 X-Window is a network-oriented graphical system for Unix.
-
 - A network connection must be established between these *two entities* to send drawing  orders
+
 It is based on two main parts:
   - Software
   - X-Server
 
+X window system is bi-directionnal
+- program sends orders to the screen to display pixels, images and so on
+- X-server sends information ([[id:b98a5552-96aa-4167-b706-8ca5cc1273d6][events]]) from the keyboard and the mouse to the program,
+  - program receives events
+
 * [[id:4bb38914-0dd4-4062-bbc8-ef87769e3e71][Software]]
 * [[id:e8057aa3-7b74-4ef7-83d1-a56bc3cb4d91][X-Server]]
 * [[id:bde4a506-4119-4411-8ee8-53e003451617][mlx_init]]
+* [[id:60dea449-d879-4ff0-b438-6350e4da60a4][X11 events]]
+* [[id:3b6a655c-3eb0-4333-abff-bf68bbfc8f9d][X11 masks]]
