--- a/roam/20241023105350-mlx_image_api.org
+++ b/roam/20241023105350-mlx_image_api.org
@@ -5,6 +5,7 @@
 #+date: [2024-10-23 Wed 10:53]
 #+startup: overview
 
+* [[id:ac3d9642-735e-4e01-ad59-4bd09868a8f1][image api usage]]
 * mlx_new_image
 - creates a new image in memory
 - It returns a void *identifier needed to manipulate this image later.
