--- a/tests/mock_testing1.org
+++ b/tests/mock_testing1.org
@@ -2,7 +2,7 @@
 :GPTEL_MODEL: gpt-4o
 :GPTEL_BACKEND: ChatGPT
 :GPTEL_SYSTEM: You are a large language model living in Emacs and a helpful assistant. Avoid long answers.
-:GPTEL_BOUNDS: ((955 . 3944) (4029 . 6883) (6982 . 7101) (7110 . 7153) (7470 . 9180) (9224 . 10989) (11143 . 12215) (12311 . 14789))
+:GPTEL_BOUNDS: ((988 . 3978) (4063 . 6917) (7016 . 7135) (7144 . 7187) (7504 . 9214) (11177 . 12249) (12345 . 14823) (15034 . 17622) (17727 . 19402) (19484 . 22060))
 :END:
 
 *** I'm using minilibX in a C-project. Inside minilibX (include <mlx.h>), there is a function:
@@ -88,7 +88,7 @@ TEST(DrawRectWinTest, CallsMlxPixelPutCorrectly) {
 }
 #+end_src
 
-*** Explanation:
+**** Explanation:
 
 1. *Mock Class:* =MLXWrapper= is a class that acts as a mock for =mlx_pixel_put=.
 
@@ -311,5 +311,192 @@ In this example:
 - *Use Lambda for Mock Call:* Use a lambda or function to pass to =draw_rect_win=, which uses the mock's method.
 
 This effectively ensures that each expected coordinate invokes the function exactly once, meeting your requirement to "assert that the function has been called with any value in that range."
+
+***
+*** in the second example, that you have given me, you are using a lambda, and give it as parameter to draw_rect_win. Since draw_rect_win is a C function, this does not confirm with the PixelPutFunc type
+
+You're right, passing a lambda function to a C-style function expecting a regular function pointer isn't directly possible since lambdas with captures or C++ function objects (=std::function=) aren't compatible with C function pointer types. Here's how to handle this:
+
+1. *Use a C Function*: Define a static or standalone C function that calls the mock method.
+
+2. *Global or Static Mock Object*: Use a global or static mock object that this C function can reference to call =pixelPut=.
+
+Here's how you could adjust the example to work with C-style function pointers:
+
+#+begin_src cpp
+#include <gtest/gtest.h>
+#include <gmock/gmock.h>
+
+class MLXWrapper {
+public:
+    MOCK_METHOD5(pixelPut, int(void* mlx_ptr, void* win_ptr, int x, int y, int color));
+};
+
+// Global pointer to use in the C function
+static MLXWrapper* g_mockWrapper = nullptr;
+
+// C-style function matching the PixelPutFunc signature
+extern "C" int mock_pixel_put(void* mlx_ptr, void* win_ptr, int x, int y, int color) {
+    if (g_mockWrapper) {
+        return g_mockWrapper->pixelPut(mlx_ptr, win_ptr, x, y, color);
+    }
+    return 0;
+}
+
+typedef int (*PixelPutFunc)(void*, void*, int, int, int);
+
+// Adjust this function if needed to use the function pointer
+void draw_rect_win(void* mlx_ptr, void* win_ptr, int p1, int p2, PixelPutFunc pixel_put) {
+    int x = p1;
+    int y = p2;
+    while (x < 100) {
+        y = p2;
+        while (y < 200) {
+            pixel_put(mlx_ptr, win_ptr, x, y++, 0xFF00FF);
+        }
+        x++;
+    }
+}
+
+TEST(DrawRectWinTest, CallsMlxPixelPutForEachValueInRange) {
+    MLXWrapper mock;
+    g_mockWrapper = &mock;
+
+    const int start_x = 10;
+    const int end_x = 100;
+    const int start_y = 20;
+    const int end_y = 200;
+
+    // Set up expectation for the function calls
+    EXPECT_CALL(mock, pixelPut(testing::_, testing::_, testing::Ge(start_x), testing::Lt(end_x),
+                               testing::Ge(start_y), testing::Lt(end_y), 0xFF00FF))
+        .Times((end_x - start_x) * (end_y - start_y));
+
+    draw_rect_win(nullptr, nullptr, start_x, start_y, mock_pixel_put);
+
+    g_mockWrapper = nullptr; // Clean up
+}
+#+end_src
+
+**** Key Points:
+
+- *C-Style Callback*: The =mock_pixel_put= function acts as a bridge between your C function and the C++ mock object.
+- *Global Mock Object*: The =g_mockWrapper= serves as a global accessor to the mock, allowing the standalone C function to use it.
+- *Expectations*: Ensure the =EXPECT_CALL= setup correctly expects the range and exact number of calls needed for your test. Adjust the conditions to meet your specific test purposes.
+
+***
+*** how do i test that a function was testet a certain amount of times, no matter the arguments?
+
+
+To test that a function is called a specific number of times, regardless of the arguments, you can set up your expectation with =testing::_= as a wildcard to ignore all arguments. Use =.Times(n)= to specify the exact number of times the function should be called. Here's how you can do that with Google Mock:
+
+#+begin_src cpp
+#include <gtest/gtest.h>
+#include <gmock/gmock.h>
+
+class MLXWrapper {
+public:
+    MOCK_METHOD5(pixelPut, int(void* mlx_ptr, void* win_ptr, int x, int y, int color));
+};
+
+TEST(DrawRectWinTest, CallsMlxPixelPutExactNumberOfTimes) {
+    MLXWrapper mock;
+    g_mockWrapper = &mock;
+
+    // Assume this is based on the logic in draw_rect_win for a given p1 and p2
+    const int expectedCalls = 90 * 180; // Adjust this based on your actual logic
+
+    EXPECT_CALL(mock, pixelPut(testing::_, testing::_, testing::_, testing::_, testing::_))
+        .Times(expectedCalls);
+
+    draw_rect_win(nullptr, nullptr, 10, 20, mock_pixel_put);
+
+    g_mockWrapper = nullptr; // Clean up
+}
+#+end_src
+
+*** Explanation:
+
+- *=EXPECT_CALL= with =testing::_=:* The =testing::_= matcher acts as a wildcard, indicating "match any value" for each parameter of =pixelPut=, allowing us to ignore specific arguments.
+
+- *=.Times(n)=:* This specifies that the mock function should be called =n= times in total. Adjust =expectedCalls= to reflect the number of expected invocations based on your function's logic.
+
+- *Global/Static Mock Usage:* Ensure the =mock_pixel_put= bridges to the mock object correctly if you're handling this in a C-style callback environment.
+
+This setup verifies the function call count without consideration for the actual arguments used in each call.
+
+*** how can i know at which value-combination the expected call didn't appear?
+
+To diagnose at which value-combination the expected call didn't appear, you can enhance your test output by logging the actual call parameters. This can help you figure out which particular calls were missing. One way to accomplish this is by using Google Mock's "action" and "side effect" features to record parameters or print them out each time the mock method is called.
+
+Here's an approach using a custom action to log the parameters:
+
+#+begin_src cpp
+#include <gtest/gtest.h>
+#include <gmock/gmock.h>
+#include <iostream>
+#include <set>
+
+class MLXWrapper {
+public:
+    MOCK_METHOD5(pixelPut, int(void* mlx_ptr, void* win_ptr, int x, int y, int color));
+};
+
+// A simple struct to hold the call details for comparison later
+struct CallDetails {
+    int x;
+    int y;
+    bool operator<(const CallDetails& other) const {
+        return std::tie(x, y) < std::tie(other.x, other.y);
+    }
+};
+
+TEST(DrawRectWinTest, IdentifyMissingCalls) {
+    MLXWrapper mock;
+    g_mockWrapper = &mock;
+
+    const int start_x = 10;
+    const int end_x = 100;
+    const int start_y = 20;
+    const int end_y = 200;
+
+    std::set<CallDetails> expectedCalls;
+    for (int x = start_x; x < end_x; ++x) {
+        for (int y = start_y; y < end_y; ++y) {
+            expectedCalls.insert({x, y});
+        }
+    }
+
+    std::set<CallDetails> actualCalls;
+
+    // Log actual call parameters
+    EXPECT_CALL(mock, pixelPut(testing::_, testing::_, testing::_, testing::_, testing::_))
+        .WillRepeatedly(testing::Invoke([&actualCalls](void*, void*, int x, int y, int) {
+            actualCalls.insert({x, y});
+            return 0;
+        }));
+
+    draw_rect_win(nullptr, nullptr, start_x, start_y, mock_pixel_put);
+
+    // Compare and log any missing calls
+    for (const auto& expected : expectedCalls) {
+        if (actualCalls.find(expected) == actualCalls.end()) {
+            std::cerr << "Missing call for x: " << expected.x << ", y: " << expected.y << "\n";
+        }
+    }
+
+    g_mockWrapper = nullptr; // Clean up
+}
+#+end_src
+
+*** Explanation:
+
+1. *Call Tracking*: Use a =std::set<CallDetails>= to track which =(x, y)= calls you expect and which ones actually occur.
+
+2. *Invoke Action*: The =Invoke= action captures parameters every time =pixelPut= is called and logs them into =actualCalls=.
+
+3. *Comparison*: After =draw_rect_win= runs, compare =expectedCalls= to =actualCalls= and print out any missing calls.
+
+This approach gives you insight into which specific =(x, y)= values weren't called in the way you expected. Adjust the matchers and logic to suit your specific test context.
 
 ***
